--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,11 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
