--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8"
   },
   "scripts": {
