--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
     "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8"
   }
 }
