--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -4,13 +4,24 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "extends": ["eslint:recommended", "prettier"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:prettier/recommended"],
   "env": {
     "es2021": true,
     "node": true
   },
   "rules": {
     "no-console": "error",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto",
+        "semi": true,
+        "tabWidth": 2,
+        "printWidth": 100,
+        "singleQuote": true,
+        "trailingComma": "none"
+      }
+    ]
   }
 }
