feat: connect dynamodb and config

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -10,8 +10,8 @@
     "node": true
   },
   "rules": {
-    "no-console": "error",
     "no-unused-vars": "off",
+    "no-console": "off",
     "prettier/prettier": [
       "error",
       {
