--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
