--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1397.0",
+    "axios": "^1.4.0",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
