--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "twilio": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
