--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.22",
+    "openai": "^3.3.0",
     "twilio": "^4.12.0"
   },
   "devDependencies": {
