--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-snap-carousel": "^0.3.2",
+    "react-type-animation": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
