--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,12 +15,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "http-status-codes": "^2.2.0",
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.22",
     "openai": "^3.3.0",
-    "twilio": "^4.12.0"
+    "twilio": "^4.12.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
