--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "http-status-codes": "^2.2.0",
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
