--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,7 @@
     "node-geocoder": "^4.2.0",
     "nodemon": "^2.0.22",
     "openai": "^3.3.0",
-    "twilio": "^4.12.0",
-    "xss": "^1.0.14"
+    "twilio": "^4.12.0"
   },
   "devDependencies": {
     "eslint": "^8.42.0",
